html finished and creation css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
   <link href="./ressources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 
+<header>
+<h1>Tea Cozy</h1>
+<ul>
+  <ol>Mission</ol>
+  <ol>Featured Tea</ol>
+  <ol> Locations</ol>
+</ul>
+</header>
 <body>
+  <div class="band ourmission">
+    <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+  </div>
+    <div class="band ourmission">
+      <h2>Tea of the Month</h2>
+    </div>>
+      <h4>What’s Steeping at The Tea Cozy?</h4>
+        <div class=Tea_of_month>
+            <div class="berry">
+              <img class="berryblitz" src="./ressources/images/img-berryblitz.webp" alt="berryblitz tea">
+              <p>Fall Berry Blitz Tea</p>
+            </div>
+                <div class="spiced">
+                  <img class="spiced_rhum" src="./ressources/images/img-spiced-rum.jpeg" alt="spiced-rum tea">
+                  <p>Spiced Rhum Tea</p>
+                </div>
+                  <div class="Seasonal">
+                    <img class="donuts" src="./ressources/images/img-berryblitz.webp" alt="seasonaj donuts tea">
+                    <p>Seasonal Donuts</p>
+                  </div>
+                    <div class="myrtie">
+                      <img class="myrtie_ave" src="./ressources/images/img-myrtle-ave.jpeg" alt="myrtle-ave tea">
+                      <p>Myrtie Ave Tea</p>
+                    </div>
+                        <div class="Bedford ">
+                          <img class="bedford Bizzare " src="./ressources/images/img-berryblitz.webp" alt="Bedford Bizarre Tea">
+                          <p>Bedford Bizarre Tea</p>
+                        </div>
+        </div>
+    
  
 </body>
 </html>
