update html css gitignore

--- a/index.html
+++ b/index.html
@@ -9,45 +9,86 @@
 </head>
 
 <header>
+<img class=" logo" src="./ressources/images/img-tea-cozy-logo.webp" alt="tea cozy logo">
 <h1>Tea Cozy</h1>
-<ul>
-  <ol>Mission</ol>
-  <ol>Featured Tea</ol>
-  <ol> Locations</ol>
-</ul>
+<div class="menu">
+  <ul>
+    <ol>Mission</ol>
+    <ol>Featured Tea</ol>
+    <ol> Locations<ol>
+  </ul>
+</div>
 </header>
 <body>
   <div class="band ourmission">
-    <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <div class="band_our_mission">
+      <h2 class="h2_mission">Our Mission</h2>
+      <h4 class="h4_mission">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
   </div>
-    <div class="band ourmission">
-      <h2>Tea of the Month</h2>
-    </div>>
-      <h4>What’s Steeping at The Tea Cozy?</h4>
-        <div class=Tea_of_month>
-            <div class="berry">
-              <img class="berryblitz" src="./ressources/images/img-berryblitz.webp" alt="berryblitz tea">
-              <p>Fall Berry Blitz Tea</p>
+    <div class="container">
+      <div class="tea_of_month">
+        <h2>Tea of the Month</h2>
+        <h4>What’s Steeping at The Tea Cozy?</h4>
+      </div>
+          <div class="berry">
+            <img class="berryblitz" src="./ressources/images/img-berryblitz.webp" alt="berryblitz tea">
+            <p class="p_tea_of_month">Fall Berry Blitz Tea</p>
+          </div>
+          <div class="spiced">
+            <img class="spiced_rhum" src="./ressources/images/img-spiced-rum.jpeg" alt="spiced-rum tea">
+            <p class="p_tea_of_month">Spiced Rhum Tea</p>
+          </div>
+          <div class="Seasonal">
+            <img class="donuts" src="./ressources/images/img-donut.jpeg" alt="seasonaj donuts tea">
+            <p class="p_tea_of_month">Seasonal Donuts</p>
+          </div>
+          <div class="myrtie">
+            <img class="myrtie_ave" src="./ressources/images/img-donut.jpeg" alt="myrtle-ave tea">
+            <p class="p_tea_of_month">Myrtie Ave Tea</p>
+          </div>
+          <div class="Bedford ">
+            <img class="bedford_bizzare " src="./ressources/images/img-bedford-bizarre.jpeg" alt="Bedford Bizarre Tea">
+            <p class="p_tea_of_month">Bedford Bizarre Tea</p>
+          </div>
+    </div>
+        <div class="locations">
+            <div class="h2_locations">
+              <h2>Locations</h2>
             </div>
-                <div class="spiced">
-                  <img class="spiced_rhum" src="./ressources/images/img-spiced-rum.jpeg" alt="spiced-rum tea">
-                  <p>Spiced Rhum Tea</p>
-                </div>
-                  <div class="Seasonal">
-                    <img class="donuts" src="./ressources/images/img-berryblitz.webp" alt="seasonaj donuts tea">
-                    <p>Seasonal Donuts</p>
-                  </div>
-                    <div class="myrtie">
-                      <img class="myrtie_ave" src="./ressources/images/img-myrtle-ave.jpeg" alt="myrtle-ave tea">
-                      <p>Myrtie Ave Tea</p>
+                <div class="tree_loc">
+                  <div class="location_1 loc_box">
+                    <h3 class="h3_loc">Dowtown</h3>
+                    <div class="p_location">
+                        <p>384 West 4th St</p>
+                        <p>Suite 108</p>
+                        <p>Portland, Maine</p>
                     </div>
-                        <div class="Bedford ">
-                          <img class="bedford Bizzare " src="./ressources/images/img-berryblitz.webp" alt="Bedford Bizarre Tea">
-                          <p>Bedford Bizarre Tea</p>
-                        </div>
+                  </div>
+                  <div class="location_2 loc_box">
+                    <h3 class="h3_loc">East Bayside</h3>
+                    <div class="p_location">
+                        <p>3433 Phisherman’s Avenue</p>
+                        <p>(Northwest Corner)</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                  </div>
+                  <div class="location_3 loc_box">
+                    <h3 class="h3_loc">Oakdale</h3>
+                    <div class="p_location">
+                        <p>515 Crescent Avenue</p>
+                        <p>Second Floor</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                  </div>
+                  
+                </div>
         </div>
-    
- 
+          <div class="address">
+            <h2>The Tea Cozy</h2>
+            <H5>contact@theteacozy.com</h5>
+            <p>917-555-8904</p>
+          </div>
+        <p>copyright The Tea Cozy 2017</p>
 </body>
 </html>
